--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         src="http://litwitchure.co.uk/distribution/assets/js/app.min.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="http://litwitchure.co.uk/distribution/assets/css/app.css">
+        <link rel="stylesheet" href="http://litwitchure.co.uk/distribution/assets/css/app.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Readex+Pro:wght@400;500&display=swap" rel="stylesheet">
         <link rel="apple-touch-icon-precomposed" sizes="57x57" href="http://litwitchure.co.uk/distribution/assets/images/favicons/apple-touch-icon-57x57.png" />
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://litwitchure.co.uk/distribution/assets/images/favicons/apple-touch-icon-114x114.png" />
