Update .co.uk domain to .com

--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
         <title>Litwitchure</title>
         <script
         defer
-        src="https://litwitchure.co.uk/distribution/assets/js/a11y.min.js"></script>
+        src="https://litwitchure.com/distribution/assets/js/a11y.min.js"></script>
         <script
         defer
-        src="https://litwitchure.co.uk/distribution/assets/js/app.min.js"></script>
+        src="https://litwitchure.com/distribution/assets/js/app.min.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="https://litwitchure.co.uk/distribution/assets/css/app.min.css">
+        <link rel="stylesheet" href="https://litwitchure.com/distribution/assets/css/app.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Readex+Pro:wght@400;500&display=swap" rel="stylesheet">
-        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://litwitchure.co.uk/distribution/assets/images/favicons/apple-touch-icon-57x57.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://litwitchure.co.uk/distribution/assets/images/favicons/apple-touch-icon-114x114.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://litwitchure.co.uk/distribution/assets/images/favicons/apple-touch-icon-72x72.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://litwitchure.co.uk/distribution/assets/images/favicons/apple-touch-icon-144x144.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://litwitchure.co.uk/distribution/assets/images/favicons/apple-touch-icon-60x60.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://litwitchure.co.uk/distribution/assets/images/favicons/apple-touch-icon-120x120.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://litwitchure.co.uk/distribution/assets/images/favicons/apple-touch-icon-76x76.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://litwitchure.co.uk/distribution/assets/images/favicons/apple-touch-icon-152x152.png" />
-        <link rel="icon" type="image/png" href="https://litwitchure.co.uk/distribution/assets/images/favicons/favicon-196x196.png" sizes="196x196" />
-        <link rel="icon" type="image/png" href="https://litwitchure.co.uk/distribution/assets/images/favicons/favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/png" href="https://litwitchure.co.uk/distribution/assets/images/favicons/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="https://litwitchure.co.uk/distribution/assets/images/favicons/favicon-16x16.png" sizes="16x16" />
-        <link rel="icon" type="image/png" href="https://litwitchure.co.uk/distribution/assets/images/favicons/favicon-128.png" sizes="128x128" />
+        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://litwitchure.com/distribution/assets/images/favicons/apple-touch-icon-57x57.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://litwitchure.com/distribution/assets/images/favicons/apple-touch-icon-114x114.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://litwitchure.com/distribution/assets/images/favicons/apple-touch-icon-72x72.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://litwitchure.com/distribution/assets/images/favicons/apple-touch-icon-144x144.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://litwitchure.com/distribution/assets/images/favicons/apple-touch-icon-60x60.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://litwitchure.com/distribution/assets/images/favicons/apple-touch-icon-120x120.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://litwitchure.com/distribution/assets/images/favicons/apple-touch-icon-76x76.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://litwitchure.com/distribution/assets/images/favicons/apple-touch-icon-152x152.png" />
+        <link rel="icon" type="image/png" href="https://litwitchure.com/distribution/assets/images/favicons/favicon-196x196.png" sizes="196x196" />
+        <link rel="icon" type="image/png" href="https://litwitchure.com/distribution/assets/images/favicons/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/png" href="https://litwitchure.com/distribution/assets/images/favicons/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="https://litwitchure.com/distribution/assets/images/favicons/favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="https://litwitchure.com/distribution/assets/images/favicons/favicon-128.png" sizes="128x128" />
         <meta name="application-name" content="&nbsp;"/>
         <meta name="msapplication-TileColor" content="#FFFFFF" />
         <meta name="msapplication-TileImage" content="mstile-144x144.png" />
@@ -45,7 +45,7 @@
                     <figure class="introduction__image">
                         <img
                         alt="The cover of the book Wild Card by Jenifer Cownie &amp; Fiona Lensvelt"
-                        src="https://litwitchure.co.uk/distribution/assets/images/wild_card_tarot_book.jpg">
+                        src="https://litwitchure.com/distribution/assets/images/wild_card_tarot_book.jpg">
                     </figure><!-- .introduction__image -->
                     <div class="introduction__text">
                         <p>We’re Jen Cownie and Fiona Lensvelt, friends and tarot readers. We’ve been running Litwitchure together since 2018, and are the authors of <a href="https://www.panmacmillan.com/authors/jen-cownie/wild-card/9781529082111">Wild Card</a>.</p>
@@ -63,7 +63,7 @@
                     <figure class="performance__image">
                         <img
                         alt="Jen Cownie &amp; Fiona Lensvelt"
-                        src="https://litwitchure.co.uk/distribution/assets/images/litwitchure_jen_cownie_and_fiona_lensvelt.jpg">
+                        src="https://litwitchure.com/distribution/assets/images/litwitchure_jen_cownie_and_fiona_lensvelt.jpg">
                     </figure><!-- .performance__image -->
                 </div><!-- .performance__inner -->
             </div><!-- .performance -->
